TLINE-112 #comment Fix spacing of the profile info card when viewing another's profile

--- a/mobile/scss/modules/profile.scss
+++ b/mobile/scss/modules/profile.scss
@@ -358,11 +358,19 @@ $photo-dimension : $profile-subheader-height * 1.1;
     }
   }
   
+  .content-pane.view-only {
+      .profile-list .card {
+          & > .row {
+            top: 0;   
+          }
+      }
+  }
+  
   .profile-list {
       .card {
          & > .row {
               position: relative;
-	          top: -15px;
+	          top: -20px;
           }
       
         padding-bottom: 0!important;
